componente creado y middleware utilizando

--- a/.env
+++ b/.env
@@ -52,8 +52,8 @@ MAIL_MAILER=log
 MAIL_SCHEME=null
 MAIL_HOST=127.0.0.1
 MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
+MAIL_USERNAME=4648e6a7b2e62b
+MAIL_PASSWORD=e4105c7e8b439a
 MAIL_FROM_ADDRESS="hello@example.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
