mensaje error personalizados

--- a/.env
+++ b/.env
@@ -50,11 +50,12 @@ REDIS_PORT=6379
 
 MAIL_MAILER=log
 MAIL_SCHEME=null
-MAIL_HOST=127.0.0.1
+MAIL_MAILER=smtp
+MAIL_HOST=sandbox.smtp.mailtrap.io
 MAIL_PORT=2525
 MAIL_USERNAME=4648e6a7b2e62b
 MAIL_PASSWORD=e4105c7e8b439a
-MAIL_FROM_ADDRESS="hello@example.com"
+MAIL_FROM_ADDRESS="autentication@libreriapp.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
